# ColorConsoleLib

./: CMakeLists.txt  README.md  appveyor.yml
ci/: appveyor_ci_build.ps1  appveyor_ci_test.ps1
cmake/Modules/: FindCppUTest.cmake
debian/: copyright  package_description
examples/: CMakeLists.txt
examples/ColorConsole/: CMakeLists.txt
examples/ColorConsole/sources/: Example.ColorConsole.cpp
examples/ColorConsoleW/: CMakeLists.txt
examples/ColorConsoleW/sources/: Example.ColorConsoleW.cpp
examples/ColorsTable/: CMakeLists.txt
examples/ColorsTable/sources/: Example.ColorsTable.cpp
lib/: CMakeLists.txt  InstallersSetup.cmake
lib/include/: ColorConsole.hpp  ColorConsoleCommon.hpp  ColorConsoleW.hpp
lib/sources/: ColorConsole.cpp  ColorConsoleHelpers.hpp  ColorConsoleW.cpp
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake
test/ColorConsoleW_ANSI/: CMakeLists.txt  ColorConsoleW_ANSI_test.cpp
test/ColorConsoleW_Custom/: CMakeLists.txt  ColorConsoleW_Custom_test.cpp
test/ColorConsoleW_Init_ANSI/: CMakeLists.txt  ColorConsoleW_Init_ANSI_test.cpp
test/ColorConsoleW_Init_Win32/: CMakeLists.txt  ColorConsoleW_Init_Win32_test.cpp  ColorConsoleW_Init_test.cpp
test/ColorConsoleW_Win32/: CMakeLists.txt  ColorConsoleW_Win32_test.cpp  ColorConsoleW_test.cpp
test/ColorConsole_ANSI/: CMakeLists.txt  ColorConsole_ANSI_test.cpp
test/ColorConsole_Custom/: CMakeLists.txt  ColorConsole_Custom_test.cpp
test/ColorConsole_Init_ANSI/: CMakeLists.txt  ColorConsole_Init_ANSI_test.cpp
test/ColorConsole_Init_Win32/: CMakeLists.txt  ColorConsole_Init_Win32_test.cpp  ColorConsole_Init_test.cpp
test/ColorConsole_Win32/: CMakeLists.txt  ColorConsole_Win32_test.cpp  ColorConsole_test.cpp
test/Mocks/: Win32_expect.cpp  Win32_expect.hpp  Win32_mock.cpp
test/TestHelpers/: TestHelpers.cpp  TestHelpers.hpp
